# kalshi-backtest

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  compare_fills.py  data  main.py  metrics.py  prepare.py  program.md  pyproject.toml  report.py  train.py  train_limit.py
.github/workflows/: ci.yml  pages.yml
analysis/: model_calibration_2026-03-01.md  model_vs_market_calibration_by_time_2026-03-01.md
analyze/: in-sample-195bf64.json  in-sample-195bf64.md  oos-195bf64.json  oos-195bf64.md  run_analysis.md
crates/engine/: Cargo.toml
crates/engine/src/: account.rs  exchange.rs  lib.rs  orderbook.rs  types.rs
docs/superpowers/plans/: 2026-04-01-kalshi-backtest-engine.md
docs/superpowers/specs/: 2026-04-01-kalshi-backtest-engine-design.md
engine/: __init__.py  strategy.py
fv-timeseries/: pyproject.toml
fv-timeseries/fv_timeseries/: __init__.py  generate.py  storage.py
fv-timeseries/scripts/: initrt.py
media/: backtest_buy_low_polymarket.html  backtest_gambling_addiction_kalshi.html
prediction-market-analysis/: .env.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
prediction-market-analysis/docs/: ANALYSIS.md  SCHEMAS.md
prediction-market-analysis/docs/plans/: 2026-03-01-kxrt-market-profile-design.md  2026-03-01-kxrt-market-profile.md
prediction-market-analysis/scripts/: download.sh  install-tools.sh
prediction-market-analysis/src/common/: __init__.py  analysis.py  client.py  indexer.py  storage.py
prediction-market-analysis/tests/: conftest.py  test_analysis_run.py  test_analysis_save.py  test_compile.py
results/: fv_kelly_T1110_2026-02-28.md  fv_kelly_kalshi_rt_2026-02-28.md  fv_kelly_min_kelly_fraction_2026-03-01.md  fv_kelly_no_midprice_tuning_2026-02-28.md
scripts/: run_fv_kelly.py
src/backtesting/: __init__.py  broker.py  engine.py  front_test_engine.py  metrics.py  models.py  paper_broker.py  plotting.py  progress.py  rust_engine.py  strategy.py
src/backtesting/feeds/: base.py  kalshi.py  kalshi_live.py  kalshi_rt.py  polymarket.py  polymarket_live.py
src/backtesting/strategies/: __init__.py  buy_low.py  calibration_arb.py  fv_kelly.py  gambling_addiction.py
tests/: test_backtest_broker.py  test_backtest_engine.py  test_backtest_feeds.py  test_plotting.py
(+67 files in other folders)
