[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kalshi-backtest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "pymongo",
    "python-dotenv",
    "httpx",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "engine._engine"
python-source = "."
manifest-path = "crates/engine/Cargo.toml"
